syntax = "proto3";

package user_service;

option go_package = "/internal/proto;proto";

message SaveUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SaveUserResponse {
  string id = 1;
  bool success = 2;
}

message GetUserPasswordRequest {
  string id = 1;
  string username = 2;
}

message GetUserPasswordResponse {
  string password = 1;
}

service UserService {
  rpc SaveUser(SaveUserRequest) returns (SaveUserResponse);
  rpc GetUserPassword(GetUserPasswordRequest) returns (GetUserPasswordResponse);
}